# idpaq

./: .gitignore  Cargo.toml  README.md
benches/: compression.rs
src/: ans.rs  lib.rs  roc.rs
tests/: property_tests.rs
