[package]
name = "cnk"
version = "0.1.0"
edition = "2021"
description = "Set compression via C(n,k): ROC, ANS, delta encoding"
license = "MIT OR Apache-2.0"
keywords = ["compression", "entropy", "ans", "inverted-index"]
categories = ["compression", "algorithms"]

[features]
default = []
# Enable full ANS entropy coding via constriction
ans = ["constriction"]
# All features
full = ["ans"]

[dependencies]
constriction = { version = "0.4", optional = true }

[dev-dependencies]
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "compression"
harness = false

[profile.release]
lto = "thin"
codegen-units = 1
debug = 1

[profile.bench]
lto = "thin"
codegen-units = 1
debug = 1

[profile.release-optimized]
inherits = "release"
lto = "fat"
panic = "abort"
strip = true
debug = false